--- a/progetto/WebContent/HomePageView.html
+++ b/progetto/WebContent/HomePageView.html
@@ -1,203 +1,238 @@
 <!DOCTYPE html>
-<html lang="en">
-<title>Ticket S</title>
+<html>
+<head>
 <meta charset="UTF-8">
+<title>Ticket S Home</title>
+</head>
+<link rel="stylesheet" href="Home2.css" >
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {font-family: "Lato", sans-serif}
-.mySlides {display: none}
-</style>
 <body>
 
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Ticket S</a>
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TOUR</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Merchandise</a>
-        <a href="#" class="w3-bar-item w3-button">Extras</a>
-        <a href="#" class="w3-bar-item w3-button">Media</a>
-      </div>
-    </div>
-   <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
-   
-  </div>
+
+<div class="tickets">
+	<img src="foto/TicketS.png" alt= "Logo TicketS">
 </div>
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Cerca</a>
+
+<!-- Navigation Bar -->
+
+<ul class= "NavBar1" id= "myNavBar1">
+  	<li><a class= "sinistra active" href="#home">HOME</a></li>
+  	<li><a class= "sinistra" href="#stadi">STADI</a></li>
+  	<li><a class= "sinistra" href="#eventi">EVENTI</a></li>
+  	<li><a class= "sinistra" href="#biglietti">BIGLIETTI</a></li>
+ 	<li><a class= "sinistra" href="#about">ABOUT</a>
+ 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><b>&#9776;</b></a></li>
+  	<li><a class= "destra" href="#carrello" data-toggle="tooltip" data-placement="left" title= "CARRELLO"><i class='fas fa-shopping-cart'></i></a></li>
+  	<li><a class= "destra" href="#login" data-toggle="tooltip" data-placement="left" title="LOGIN"><i class='fas fa-user-alt'></i></a></li>
+</ul>
+
+
+<!-- Automatic Slideshow Images -->
+<div class="galleria-foto-giganti col-9 col-s-12">
+<div class="foto-gigante">
+    <img src="foto/San Paolo.jpg" alt= "Stadio San Paolo">
+    <div class="scritta-nella-foto">
+      <h3>Los Angeles</h3>
+      <p><b>We had the best time playing at Venice Beach!</b></p>   
+    </div>
+  </div>
+  <div class="foto-gigante">
+    <img src="foto/Allianz Stadium.jpg" alt= "Stadio Allianz Stadium">
+    <div class="scritta-nella-foto">
+      <h3>New York</h3>
+      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+    </div>
+  </div>
+  <div class="foto-gigante">
+    <img src="foto/San Siro.png" alt= "Stadio San Siro">
+    <div class="scritta-nella-foto">
+      <h3>Chicago</h3>
+      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+    </div>
+  </div>
 </div>
-
-<!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
-
-  <!-- Automatic Slideshow Images -->
-  <div class="mySlides w3-display-container w3-center">
-    <img src="foto/JuventusStadium.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Juventus Stadium</h3>
-      <p><b>descrizione a caso dove potrebbe andar scritto qualcosa di utile</b></p>   
-    </div>
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img src="foto/SanPaolo.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>San Paolo</h3>
-      <p><b>descrizione a caso dove potrebbe andar scritto qualcosa di utile</b></p>    
-    </div>
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img src="foto/SanSiro.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>San Siro</h3>
-      <p><b>descrizione a caso dove potrebbe andar scritto qualcosa di utile</b></p>    
-    </div>
-  </div>
-
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">THE BAND</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="foto/JuventusStadium.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
-      </div>
-    </div>
-  </div>
-
-  <!-- The Tour Section -->
-  <div class="w3-black" id="tour">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">TOUR DATES</h2>
-      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
-
-      <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
-      </ul>
-
-      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-        <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>New York</b></p>
-            <p class="w3-opacity">Fri 27 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-        <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Paris</b></p>
-            <p class="w3-opacity">Sat 28 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-        <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>San Francisco</b></p>
-            <p class="w3-opacity">Sun 29 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Ticket Modal -->
-  <div id="ticketModal" class="w3-modal">
-    <div class="w3-modal-content w3-animate-top w3-card-4">
-      <header class="w3-container w3-teal w3-center w3-padding-32"> 
-        <span onclick="document.getElementById('ticketModal').style.display='none'" 
-       class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-        <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
-      </header>
-      <div class="w3-container">
-        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="How many?">
-        <p><label><i class="fa fa-user"></i> Send To</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="Enter email">
-        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
-        <button class="w3-button w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
-        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
-        <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
-          </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form>
-      </div>
-    </div>
-  </div>
   
-<!-- End Page Content -->
+  
+
+
+
+
+
+<!--Eventi più importanti-->
+
+<div class= "eventi-importanti col-11 col-s-12">
+	<p class= "titolo-eventi-importanti"><b>Eventi recenti più importanti</b></p>
+	<div class= "galleria-foto-eventi col-4 col-s-6">
+		<div class= "foto-eventi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc"><p>Stadio San Paolo</p></div>
+		</div>
+	</div>
+
+	<div class= "galleria-foto-eventi col-4 col-s-6">
+		<div class= "foto-eventi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San Paolo</p>
+			</div>
+		</div>
+	</div>
+
+	<div class= "galleria-foto-eventi col-4 col-s-6">
+		<div class= "foto-eventi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San Paolo</p>
+			</div>
+		</div>
+	</div>
+	
+	
+	<div class= "galleria-foto-eventi col-4 col-s-6">
+		<div class= "foto-eventi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San Paolo</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class= "galleria-foto-eventi col-4 col-s-6">
+		<div class= "foto-eventi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San Paolo</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class= "galleria-foto-eventi col-4 col-s-6"><!--col-4 col-s-6  -->
+		<div class= "foto-eventi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San Paolo</p>
+			</div>
+		</div>
+	</div>
 </div>
 
-<!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+
+
+<!-- Stadi più importanti -->
+<div class= "stadi-importanti col-11 col-s-12">
+	<p class= "titolo-stadi-importanti"><b>Stadi più importanti per eventi</b></p>
+	<div class= "galleria-foto-stadi col-4 col-s-6">
+		<div class= "foto-stadi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San Paolo</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class= "galleria-foto-stadi col-4 col-s-6">
+		<div class= "foto-stadi">
+			<a target= "_top" href= "foto/San Siro.png">
+				<img src="foto/San Siro.png" alt="Stadio San Siro">
+			</a>
+			<div class= "desc">
+				<p>Stadio San Siro</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class= "galleria-foto-stadi col-4 col-s-6">
+		<div class= "foto-stadi">
+			<a target= "_top" href= "foto/Allianz Stadium.jpg">
+				<img src="foto/Allianz Stadium.jpg" alt="Allianz Stadium">
+			</a>
+			<div class= "desc">
+				<p>Allianz Stadium</p>
+			</div>
+		</div>
+	</div>
+		
+	<div class= "galleria-foto-stadi col-4 col-s-6">
+		<div class= "foto-stadi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San paolo</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class= "galleria-foto-stadi col-4 col-s-6">
+		<div class= "foto-stadi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San paolo</p>
+			</div>
+		</div>
+	</div>
+		
+	<div class= "galleria-foto-stadi col-4 col-s-6">
+		<div class= "foto-stadi">
+			<a target= "_top" href= "foto/San Paolo.jpg">
+				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			</a>
+			<div class= "desc">
+				<p>Stadio San paolo</p>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+<footer class= "footer col-10 col-s-12">
+	<h2>Questo è il footer non so cosa metterci dentro</h2>
 </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script>
+$(document).ready(function(){
+  $('[data-toggle="tooltip"]').tooltip();
+});
+</script>
 
 <script>
 // Automatic Slideshow - change image every 4 seconds
@@ -206,7 +241,7 @@ carousel();
 
 function carousel() {
   var i;
-  var x = document.getElementsByClassName("mySlides");
+  var x = document.getElementsByClassName("foto-gigante");
   for (i = 0; i < x.length; i++) {
     x[i].style.display = "none";  
   }
@@ -216,24 +251,38 @@ function carousel() {
   setTimeout(carousel, 4000);    
 }
 
-// Used to toggle the menu on small screens when clicking on the menu button
+//Navigation Bar
 function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else { 
-    x.className = x.className.replace(" w3-show", "");
+	  var x = document.getElementById("myNavBar1");
+	  if (x.className === "NavBar1") {
+	    x.className += " responsive";
+	  } else {
+	    x.className = "NavBar1";
+	  }
+	}
+
+
+//When the user scrolls the page, execute myFunction
+window.onscroll = function() {stickyFunction()};
+
+
+var navbar = document.getElementById("myNavBar1");
+
+var sticky = navbar.offsetTop;
+
+// Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+function stickyFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
   }
 }
 
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
 </script>
 
 </body>
+
+
+
 </html>
