--- a/progetto/WebContent/Login.html
+++ b/progetto/WebContent/Login.html
@@ -2,29 +2,46 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Test per il form di login</title>
+<title>Login</title>
 </head>
+<link rel="stylesheet" href="Login.css">
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-	<h1> Pagina di test per il form di login </h1>
-	
+
+
+<!-- Navigation Bar -->
+
+<ul class="NavBar1" id="myNavBar1">
+  	<li><a class= "sinistra" href="#home">HOME</a></li>
+  	<li><a class= "sinistra" href="#stadi">STADI</a></li>
+  	<li><a class= "sinistra" href="#biglietti">BIGLIETTI</a></li>
+  	<li><a class= "sinistra" href="#about">ABOUT</a>
+  		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><b>&#9776;</b></a></li>
+  	<li><a class="destra" href="#carrello" data-toggle="tooltip" data-placement="left" title= "CARRELLO"><i class='fas fa-shopping-cart'></i></a></li>
+  	<li><a class="destra active" href="#login" data-toggle="tooltip" data-placement="left" title="LOGIN"><i class='fas fa-user-alt'></i></a></li>
+</ul>
+
+<div class="pagina col-9 col-s-12">
 	<div class="scelta">
-		<button>Registrazione</button>
-		<button>Login</button>
-		<button>Admin Login</button>
+		<button class="button">Registrazione</button>
+		<button class="button">Login</button>
+		<button class="button">Admin Login</button>
 	</div>
+</div>
 	
 	<div class="registrazione">
 		<form action="RegisterServlet" method="post">
 			<label for="email">Email</label><br>
-			<input type="email" id="email" name="email" required><br>
+			<input class="rettangoli" type="email" id="email" name="email" required><br>
 			<label for="uname">Nome utente:</label><br>
-			<input type="text" id="uname" name="uname" required><br>
+			<input class="rettangoli" type="text" id="uname" name="uname" required><br>
 			<label for="pass">Password:</label><br>
-			<input type="password" id="pass" name="pass" required><br>
+			<input class="rettangoli" type="password" id="pass" name="pass" required><br>
 			<label for="pass2">Ripeti la Password</label><br>
-			<input type="password" id="pass2" name="pass2"required><br>
+			<input class="rettangoli" type="password" id="pass2" name="pass2"required><br>
 			
-			<input type="submit" value="Invia">
+			<input class="buttoncino" type="submit" value="Invia">
 		</form>		
 	</div>
 	
@@ -32,10 +49,10 @@
 	<div class="login">
 		<form action="LoginServlet" method="post">
 			<label for="uname">Nome utente:</label><br>
-			<input type="text" id="uname" name="uname" required><br>
+			<input class="rettangoli" type="text" id="uname" name="uname" required><br>
 			<label for="pass">Password:</label><br>
-			<input type="password" id="pass" name="pass" required><br>
-			<input type="submit" value="Login">
+			<input class="rettangoli" type="password" id="pass" name="pass" required><br>
+			<input class="buttoncino" type="submit" value="Login">
 		</form>
 		
 	</div>
@@ -43,14 +60,17 @@
 	
 	<div class="loginAdmin">
 		<form action="AdminLoginServlet" method="post">
-		<label for="uname">Nome utente:</label><br>
-			<input type="text" id="uname" name="uname" required><br>
+			<label for="uname">Nome utente:</label><br>
+			<input class="rettangoli" type="text" id="uname" name="uname" required><br>
 			<label for="pass">Password:</label><br>
-			<input type="password" id="pass" name="pass" required><br>
+			<input class="rettangoli" type="password" id="pass" name="pass" required><br>
 			<label for="codiceAdmin"> Codice di accesso Admin</label><br>
-			<input type="number" id="codiceAdmin" name="codiceAdmin" min = 0  max = 999999 required><br>
-			<input type="submit" value="Login">
+			<input class="rettangoli" type="number" id="codiceAdmin" name="codiceAdmin" min = 0  max = 999999 required><br>
+			<input class="buttoncino" type="submit" value="Login">
 		</form>
 	</div>
+
+
+
 </body>
 </html>
