--- a/progetto/WebContent/Login.html
+++ b/progetto/WebContent/Login.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Login</title>
 </head>
-<link rel="stylesheet" href="Login.css">
+<link rel="stylesheet" href="Home2.css">
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
@@ -22,26 +22,26 @@
   	<li><a class="destra active" href="#login" data-toggle="tooltip" data-placement="left" title="LOGIN"><i class='fas fa-user-alt'></i></a></li>
 </ul>
 
-<div class="pagina col-9 col-s-12">
-	<div class="scelta">
+
+	<div class="scelta col-8 col-s-10">
 		<button class="button">Registrazione</button>
 		<button class="button">Login</button>
 		<button class="button">Admin Login</button>
 	</div>
-</div>
+
 	
 	<div class="registrazione">
 		<form action="RegisterServlet" method="post">
 			<label for="email">Email</label><br>
-			<input class="rettangoli" type="email" id="email" name="email" required><br>
+			<input class="rettangolilog" type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="MarioRossi1@mail.com" required><br>
 			<label for="uname">Nome utente:</label><br>
-			<input class="rettangoli" type="text" id="uname" name="uname" required><br>
+			<input class="rettangolilog" type="text" id="uname" name="uname" pattern=".{8,}" title="Minimo 8 caratteri" required><br>
 			<label for="pass">Password:</label><br>
-			<input class="rettangoli" type="password" id="pass" name="pass" required><br>
+			<input class="rettangolilog" type="password" id="pass" name="pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Minimo 8 caratteri tra cui 1 numero 1 lettera maiuscola e 1 lettera minuscola" required><br>
 			<label for="pass2">Ripeti la Password</label><br>
-			<input class="rettangoli" type="password" id="pass2" name="pass2"required><br>
+			<input class="rettangolilog" type="password" id="pass2" name="pass2" required><br>
 			
-			<input class="buttoncino" type="submit" value="Invia">
+			<input class="buttoncinolog" type="submit" value="Invia">
 		</form>		
 	</div>
 	
@@ -49,10 +49,10 @@
 	<div class="login">
 		<form action="LoginServlet" method="post">
 			<label for="uname">Nome utente:</label><br>
-			<input class="rettangoli" type="text" id="uname" name="uname" required><br>
+			<input class="rettangolilog" type="text" id="uname" name="uname" pattern=".{8,}" title="Minimo 8 caratteri" required><br>
 			<label for="pass">Password:</label><br>
-			<input class="rettangoli" type="password" id="pass" name="pass" required><br>
-			<input class="buttoncino" type="submit" value="Login">
+			<input class="rettangolilog" type="password" id="pass" name="pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Minimo 8 caratteri tra cui 1 numero 1 lettera maiuscola e 1 lettera minuscola" required><br>
+			<input class="buttoncinolog" type="submit" value="Login">
 		</form>
 		
 	</div>
@@ -61,12 +61,12 @@
 	<div class="loginAdmin">
 		<form action="AdminLoginServlet" method="post">
 			<label for="uname">Nome utente:</label><br>
-			<input class="rettangoli" type="text" id="uname" name="uname" required><br>
+			<input class="rettangolilog" type="text" id="uname" name="uname" pattern=".{8,}" title="Minimo 8 caratteri" required><br>
 			<label for="pass">Password:</label><br>
-			<input class="rettangoli" type="password" id="pass" name="pass" required><br>
+			<input class="rettangolilog" type="password" id="pass" name="pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Minimo 8 caratteri tra cui 1 numero 1 lettera maiuscola e 1 lettera minuscola" required><br>
 			<label for="codiceAdmin"> Codice di accesso Admin</label><br>
-			<input class="rettangoli" type="number" id="codiceAdmin" name="codiceAdmin" min = 0  max = 999999 required><br>
-			<input class="buttoncino" type="submit" value="Login">
+			<input class="rettangolilog" type="number" id="codiceAdmin" name="codiceAdmin" min = 0  max = 999999 required><br>
+			<input class="buttoncinolog" type="submit" value="Login">
 		</form>
 	</div>
 
