--- a/progetto/WebContent/Login.html
+++ b/progetto/WebContent/Login.html
@@ -15,6 +15,7 @@
 <ul class="NavBar1" id="myNavBar1">
   	<li><a class= "sinistra" href="#home">HOME</a></li>
   	<li><a class= "sinistra" href="#stadi">STADI</a></li>
+  	<li><a class= "sinistra" href="#eventi">EVENTI</a></li>
   	<li><a class= "sinistra" href="#biglietti">BIGLIETTI</a></li>
   	<li><a class= "sinistra" href="#about">ABOUT</a>
   		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><b>&#9776;</b></a></li>
