--- a/progetto/WebContent/Login.html
+++ b/progetto/WebContent/Login.html
@@ -13,6 +13,13 @@
 		<button>Admin Login</button>
 	</div>
 	
+
+	<p style="color: green;"></p>
+	
+
+	
+
+	
 	<div class="registrazione">
 		<form action="RegisterServlet" method="post">
 			<label for="email">Email</label><br>
