--- a/progetto/WebContent/Login.html
+++ b/progetto/WebContent/Login.html
@@ -21,7 +21,8 @@
   		<li><a href="Stadi.jsp">STADI</a></li>
   		<li><a href="Eventi.jsp">EVENTI</a></li>
   		<li><a href="Biglietti.jsp">BIGLIETTI</a></li>
-  		<li><a href="Login.html" data-toggle="tooltip" data-placement="left" title="LOGIN"><i class='fas fa-user-alt'></i></a></li>
+  		<li><a href="Login.html" data-toggle="tooltip" data-placement="left" title="LOGIN"><i class="fa fa-key"></i></a></li>
+  		<li><a href="Profilo.jsp" data-toggle="tooltip" data-placement="left" title="PROFILO"><i class='fas fa-user-alt'></i></a></li>
   		<li><a href="Carrello.jsp" data-toggle="tooltip" data-placement="left" title= "CARRELLO"><i class='fas fa-shopping-cart'></i></a></li>
   		
 	</ul>
@@ -43,16 +44,16 @@
 	<div id="registrazione" class="tabcontentlog col-6 col-s-10">
 		<form action="RegisterServlet" method="post" name="formReg" onsubmit="formValLog()">
 			<label for="email">Email:</label><br>
-			<input class="rettangolilog" type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"><br>
+			<input class="rettangolilog" type="email" id="email" name="email"><br>
 			<p id="validEmailReg"></p>
 			<label for="uname">Nome utente:</label><br>
-			<input class="rettangolilog" type="text" id="uname" name="uname" pattern=".{8,}"><br>
+			<input class="rettangolilog" type="text" id="uname" name="uname"><br>
 			<p id="validUnameReg"></p>
 			<label for="pass">Password:</label><br>
-			<input class="rettangolilog" type="password" id="pass" name="pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"><br>
+			<input class="rettangolilog" type="password" id="pass" name="pass"><br>
 			<p id="validPassReg"></p>
 			<label for="pass2">Ripeti la Password:</label><br>
-			<input class="rettangolilog" type="password" id="pass2" name="pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"><br>
+			<input class="rettangolilog" type="password" id="pass2" name="pass"><br>
 			<p id="validRPassReg"></p>
 			<p id="error"></p>
 			<input class="buttoncinolog" type="submit" value="Invia" >
@@ -64,10 +65,10 @@
 	<div id="login" class="tabcontentlog col-6 col-s-10">
 		<form action="LoginServlet" method="post" name="formLog">
 			<label for="uname">Nome utente:</label><br>
-			<input class="rettangolilog" type="text" id="uname" name="uname" pattern=".{8,}" required><br>
+			<input class="rettangolilog" type="text" id="uname" name="uname" required><br>
 			<p id="validUnameLog"></p>
 			<label for="pass">Password:</label><br>
-			<input class="rettangolilog" type="password" id="pass" name="pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required><br>
+			<input class="rettangolilog" type="password" id="pass" name="pass" required><br>
 			<p id="validPassLog"></p>
 			
 			<input class="buttoncinolog" type="submit" value="Login">
