--- a/progetto/WebContent/HomePageView.html
+++ b/progetto/WebContent/HomePageView.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Ticket S Home</title>
+
+<link rel="icon" href="foto/TicketS.png">
+
 </head>
 <link rel="stylesheet" href="Home2.css" >
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -34,26 +37,26 @@
 </nav>
 
 <!-- Automatic Slideshow Images -->
-<div class="galleria-foto-giganti col-9 col-s-12">
+<div class="galleria-foto-giganti col-12 col-s-12">
 <div class="foto-gigante">
-    <img src="foto/San Paolo.jpg" alt= "Stadio San Paolo">
+    <img src="foto/San Paolo.jpg" alt= "Stadio San Paolo" height="100%">
     <div class="scritta-nella-foto">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>   
+      <h3>San Paolo</h3>
+      <p><b>Stadio ufficiale di SSC Napoli</b></p>   
     </div>
   </div>
   <div class="foto-gigante">
     <img src="foto/Allianz Stadium.jpg" alt= "Stadio Allianz Stadium" >
     <div class="scritta-nella-foto">
-      <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+      <h3>Allianz Stadium</h3>
+      <p><b>Stadio ufficiale di Juventus FC</b></p>    
     </div>
   </div>
   <div class="foto-gigante">
     <img src="foto/San Siro.jpg" alt= "Stadio San Siro" >
     <div class="scritta-nella-foto">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+      <h3>San Siro</h3>
+      <p><b>Stadio ufficiale di FC Inter e di AC Milan</b></p>    
     </div>
   </div>
 </div>
@@ -64,62 +67,62 @@
 
 
 
-<!--Eventi più importanti-->
+<!--Stadi più importanti-->
 
 <div class= "eventi-importanti col-11 col-s-12">
-	<p class= "titolo-eventi-importanti"><b>Eventi recenti più importanti</b></p>
+	<p class= "titolo-eventi-importanti"><b>Stadi più importanti</b></p>
 	<div class= "galleria-foto-eventi col-4 col-s-6">
 		<div class= "foto-eventi">
-			<a target= "_top" href= "foto/San Paolo.jpg">
+			<a target= "_top" href= "./EventStadioServlet?stadioName=San Paolo">
 				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
 			</a>
-			<div class= "desc"><p>Stadio San Paolo</p></div>
+			<div class= "desc"><p>San Paolo</p></div>
 		</div>
 	</div>
 
 	<div class= "galleria-foto-eventi col-4 col-s-6">
 		<div class= "foto-eventi">
-			<a target= "_top" href= "foto/San Paolo.jpg">
-				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			<a target= "_top" href= "./EventStadioServlet?stadioName=San Siro">
+				<img src="foto/San Siro.jpg" alt="foto/San Siro.jpg">
 			</a>
-			<div class= "desc"><p>Stadio San Paolo</p></div>
+			<div class= "desc"><p>San Siro</p></div>
 		</div>
 	</div>
 
 	<div class= "galleria-foto-eventi col-4 col-s-6">
 		<div class= "foto-eventi">
-			<a target= "_top" href= "foto/San Paolo.jpg">
-				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			<a target= "_top" href= "./EventStadioServlet?stadioName=Allianz Stadium">
+				<img src="foto/Allianz Stadium.jpg" alt="foto/Allianz Stadium.jpg">
 			</a>
-			<div class= "desc"><p>Stadio San Paolo</p></div>
+			<div class= "desc"><p>Allianz Stadium</p></div>
 		</div>
 	</div>
 	
 	
 	<div class= "galleria-foto-eventi col-4 col-s-6">
 		<div class= "foto-eventi">
-			<a target= "_top" href= "foto/San Paolo.jpg">
-				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			<a target= "_top" href= "./EventStadioServlet?stadioName=Camp Nou">
+				<img src="foto/Camp Nou.jpg" alt="foto/Camp Nou.jpg">
 			</a>
-			<div class= "desc"><p>Stadio San Paolo</p></div>
+			<div class= "desc"><p>Camp Nou</p></div>
 		</div>
 	</div>
 	
 	<div class= "galleria-foto-eventi col-4 col-s-6">
 		<div class= "foto-eventi">
-			<a target= "_top" href= "foto/San Paolo.jpg">
-				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			<a target= "_top" href= "./EventStadioServlet?stadioName=Stamford Bridge">
+				<img src="foto/Stamford Bridge.jpg" alt="foto/Stamford Bridge.jpg">
 			</a>
-			<div class= "desc"><p>Stadio San Paolo</p></div>
+			<div class= "desc"><p>Stamford Bridge</p></div>
 		</div>
 	</div>
 	
 	<div class= "galleria-foto-eventi col-4 col-s-6"><!--col-4 col-s-6  -->
 		<div class= "foto-eventi">
-			<a target= "_top" href= "foto/San Paolo.jpg">
-				<img src="foto/San Paolo.jpg" alt="Stadio San Paolo">
+			<a target= "_top" href= "./EventStadioServlet?stadioName=Wembley Stadium">
+				<img src="foto/Wembley Stadium.jpg" alt="foto/Wembley Stadium.jpg">
 			</a>
-			<div class= "desc"><p>Stadio San Paolo</p></div>
+			<div class= "desc"><p>Wembley Stadium</p></div>
 		</div>
 	</div>
 </div>
