--- a/progetto/WebContent/Login.html
+++ b/progetto/WebContent/Login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="icon" href="foto/TicketS.png">
 <title>Test per il form di login</title>
 </head>
 <link rel="stylesheet" href="Home2.css">
@@ -93,7 +94,7 @@
 		</form>
 	</div>
 
-<script src="FormValLog.js"></script>
+
 <script src="AdminPage.js"></script>
 <script src="NavBar.js"></script>
 
