--- a/progetto/WebContent/Login.html
+++ b/progetto/WebContent/Login.html
@@ -8,6 +8,20 @@
 <link rel="stylesheet" href="Home2.css">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+@media screen and (max-width: 768px) {
+.tabcontentlog {
+width: 80%;
+}
+.button {
+font-size: 26px;
+}
+
+
+}
+
+</style>
 <body>
 
 
